--- a/project/Smart_home_security/.config
+++ b/project/Smart_home_security/.config
@@ -149,7 +149,9 @@ CONFIG_RT_USING_DFS_ROMFS=y
 #
 CONFIG_RT_USING_DEVICE_IPC=y
 CONFIG_RT_PIPE_BUFSZ=512
-# CONFIG_RT_USING_SYSTEM_WORKQUEUE is not set
+CONFIG_RT_USING_SYSTEM_WORKQUEUE=y
+CONFIG_RT_SYSTEM_WORKQUEUE_STACKSIZE=2048
+CONFIG_RT_SYSTEM_WORKQUEUE_PRIORITY=23
 CONFIG_RT_USING_SERIAL=y
 # CONFIG_RT_SERIAL_USING_DMA is not set
 CONFIG_RT_SERIAL_RB_BUFSZ=64
@@ -167,7 +169,9 @@ CONFIG_RT_USING_PIN=y
 CONFIG_RT_USING_MTD_NOR=y
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
-# CONFIG_RT_USING_RTC is not set
+CONFIG_RT_USING_RTC=y
+# CONFIG_RT_USING_ALARM is not set
+# CONFIG_RT_USING_SOFT_RTC is not set
 CONFIG_RT_USING_SDIO=y
 CONFIG_RT_SDIO_STACK_SIZE=512
 CONFIG_RT_SDIO_THREAD_PRIORITY=15
@@ -187,7 +191,10 @@ CONFIG_RT_SFUD_SPI_MAX_HZ=50000000
 # CONFIG_RT_USING_ENC28J60 is not set
 # CONFIG_RT_USING_SPI_WIFI is not set
 # CONFIG_RT_USING_WDT is not set
-# CONFIG_RT_USING_AUDIO is not set
+CONFIG_RT_USING_AUDIO=y
+CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_SIZE=4096
+CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_COUNT=2
+CONFIG_RT_AUDIO_RECORD_PIPE_SIZE=2048
 # CONFIG_RT_USING_SENSOR is not set
 # CONFIG_RT_USING_TOUCH is not set
 # CONFIG_RT_USING_HWCRYPTO is not set
@@ -228,7 +235,14 @@ CONFIG_RT_USING_POSIX=y
 #
 # Network interface device
 #
-# CONFIG_RT_USING_NETDEV is not set
+CONFIG_RT_USING_NETDEV=y
+CONFIG_NETDEV_USING_IFCONFIG=y
+CONFIG_NETDEV_USING_PING=y
+CONFIG_NETDEV_USING_NETSTAT=y
+CONFIG_NETDEV_USING_AUTO_DEFAULT=y
+# CONFIG_NETDEV_USING_IPV6 is not set
+CONFIG_NETDEV_IPV4=1
+CONFIG_NETDEV_IPV6=0
 # end of Network interface device
 
 #
@@ -561,7 +575,15 @@ CONFIG_PKG_LITTLEFS_VER="v2.0.5"
 # CONFIG_PKG_USING_QLED is not set
 # CONFIG_PKG_USING_PAJ7620 is not set
 # CONFIG_PKG_USING_AGILE_CONSOLE is not set
-# CONFIG_PKG_USING_LD3320 is not set
+CONFIG_PKG_USING_LD3320=y
+CONFIG_PKG_LD3320_PATH="/packages/peripherals/ld3320"
+CONFIG_PKG_USING_LD3320_V100=y
+# CONFIG_PKG_USING_LD3320_LATEST_VERSION is not set
+CONFIG_PKG_LD3320_VER="v1.0.0"
+CONFIG_PKG_LD3320_VERSION="v1.0.0"
+# CONFIG_PKG_USING_LD3320_DEMO is not set
+# CONFIG_PKG_USING_LD3320_DEBUG is not set
+# CONFIG_PKG_USING_LD3320_MP3 is not set
 # CONFIG_PKG_USING_WK2124 is not set
 # CONFIG_PKG_USING_LY68L6400 is not set
 # CONFIG_PKG_USING_DM9051 is not set
@@ -662,7 +684,7 @@ CONFIG_BSP_USING_SDIO1=y
 # CONFIG_BSP_USING_SDIO2 is not set
 CONFIG_BSP_USING_SDRAM=y
 # CONFIG_BSP_USING_ETH is not set
-CONFIG_BSP_USING_LCD=y
+# CONFIG_BSP_USING_LCD is not set
 CONFIG_BSP_USING_DCMI=y
 # CONFIG_BSP_USING_TIM is not set
 # end of On-chip Peripheral
