--- a/project/Smart_home_security/.config
+++ b/project/Smart_home_security/.config
@@ -3,7 +3,7 @@
 #
 # RT-Thread Kernel
 #
-CONFIG_RT_NAME_MAX=8
+CONFIG_RT_NAME_MAX=32
 # CONFIG_RT_USING_ARCH_DATA_TYPE is not set
 # CONFIG_RT_USING_SMP is not set
 CONFIG_RT_ALIGN_SIZE=4
@@ -95,7 +95,7 @@ CONFIG_RT_MAIN_THREAD_PRIORITY=10
 CONFIG_RT_USING_FINSH=y
 CONFIG_FINSH_THREAD_NAME="tshell"
 CONFIG_FINSH_USING_HISTORY=y
-CONFIG_FINSH_HISTORY_LINES=5
+CONFIG_FINSH_HISTORY_LINES=20
 CONFIG_FINSH_USING_SYMTAB=y
 CONFIG_FINSH_USING_DESCRIPTION=y
 # CONFIG_FINSH_ECHO_DISABLE_DEFAULT is not set
@@ -163,7 +163,7 @@ CONFIG_RT_USING_I2C=y
 CONFIG_RT_USING_I2C_BITOPS=y
 # CONFIG_RT_I2C_BITOPS_DEBUG is not set
 CONFIG_RT_USING_PIN=y
-# CONFIG_RT_USING_ADC is not set
+CONFIG_RT_USING_ADC=y
 # CONFIG_RT_USING_DAC is not set
 # CONFIG_RT_USING_PWM is not set
 CONFIG_RT_USING_MTD_NOR=y
@@ -653,7 +653,7 @@ CONFIG_SOC_SERIES_STM32H7=y
 #
 CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_WIFI is not set
-CONFIG_BSP_USING_OV2640=y
+# CONFIG_BSP_USING_OV2640 is not set
 CONFIG_BSP_USING_FS=y
 CONFIG_BSP_USING_SDCARD_FS=y
 CONFIG_BSP_USING_SPI_FLASH_FS=y
@@ -685,7 +685,7 @@ CONFIG_BSP_USING_SDIO1=y
 CONFIG_BSP_USING_SDRAM=y
 # CONFIG_BSP_USING_ETH is not set
 # CONFIG_BSP_USING_LCD is not set
-CONFIG_BSP_USING_DCMI=y
+# CONFIG_BSP_USING_DCMI is not set
 # CONFIG_BSP_USING_TIM is not set
 # end of On-chip Peripheral
 # end of Hardware Drivers Config
