--- a/project/Smart_home_security/.config
+++ b/project/Smart_home_security/.config
@@ -156,7 +156,7 @@ CONFIG_RT_USING_SERIAL=y
 # CONFIG_RT_SERIAL_USING_DMA is not set
 CONFIG_RT_SERIAL_RB_BUFSZ=64
 # CONFIG_RT_USING_CAN is not set
-# CONFIG_RT_USING_HWTIMER is not set
+CONFIG_RT_USING_HWTIMER=y
 # CONFIG_RT_USING_CPUTIME is not set
 CONFIG_RT_USING_I2C=y
 # CONFIG_RT_I2C_DEBUG is not set
